fix several details

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prepare": "husky install",
     "build": "webpack",
     "cf-package": "bash scripts/cf-package.sh",
-    "predeploy": "npm run build && npm run cf-package",
+    "predeploy": "npm run test && npm run build && npm run cf-package",
     "deploy": "bash scripts/cf-deploy.sh",
     "test": "npm run test:mocha && npm run test:cucumber",
     "test:cucumber:file": "cucumber-js --tags \"not @ignore\" --",
@@ -27,7 +27,10 @@
     "babel-plugin-source-map-support": "^2.2.0",
     "chai": "^4.3.7",
     "copy-webpack-plugin": "^11.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "eslint": "^8.37.0",
+    "express": "^4.18.2",
     "husky": "^8.0.3",
     "mocha": "^10.2.0",
     "sinon": "^15.0.3",
