update readme md

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,12 @@
-#for AWS deployment
-DEPLOYMENT_BUCKET=
-HTTP_API_DOMAIN_NAME=
-AWS_BACKEND_PROFILE=
-#MongoDb connection string
-DB_CONECTION=
-RANDOM_API_KEY=
-JWT_SECERT=
+#Mandatory for local environments and AWS deployment
+DB_CONECTION="mongodb+srv://xx:xx@xx.xxx.mongodb.net/xx?retryWrites=true&w=majority" #MongoDb conenction string
+RANDOM_API_KEY=xxx-xxx-xxx-xxx-xxx  #Random API KEY
+JWT_SECERT=mysecret #String to generate JWT
+API_MAPPING=v1/operations  #Base path of the API
+#Mandatory JUST for local environment
+EXPRESS_PORT=3000
+#Mandatory JUST for AWS deployment
+DEPLOYMENT_BUCKET=tn-back # AWS S3 bucket to deploy artifacts. You HAVE to create it manually
+HTTP_API_DOMAIN_NAME=tn-apis.app.com #Domain name for the API
+AWS_BACKEND_PROFILE=tnprofile #Optional. Configured AWS CLI Profile to deploy app. Leave it black if you dont want to specify a profile and use the default aws cli config.
+CERTIFICATE_ARN=arn:aws:acm:us-east-1:999:certificate/xxxx #AWS Certificate Managers ARN for DNS described in DOMAIN_NAME
